# TodoAppCpp

./: CMakeLists.txt  CompilerFlags.cmake  README.md  main.cpp  version.h.in
Tasks.App/: CMakeLists.txt  argparse.cmake
Tasks.App/src/: TasksApp.cpp  TasksApp.h
Tasks.Core/: CMakeLists.txt  magic_enum.cmake
Tasks.Core/src/: TaskManager.cpp  TaskManager.h  utils.h
Tasks.Tests/: CMakeLists.txt
Tasks.Tests/src/: TaskManager.cpp
Tasks.UI/: CMakeLists.txt
Tasks.UI/Common/: CMakeLists.txt
Tasks.UI/Common/src/: TasksUI.h
Tasks.UI/ImGui/: CMakeLists.txt  imgui.cmake
Tasks.UI/ImGui/src/: ImGuiTasksUI.cpp  ImGuiTasksUI.h  Window.cpp  Window.h  widgets.h
Tasks.UI/Provider/: CMakeLists.txt
Tasks.UI/Provider/src/: TasksUIProvider.cpp  TasksUIProvider.h
Tasks.UI/Repl/: CMakeLists.txt
Tasks.UI/Repl/src/: ReplTasksUI.cpp  ReplTasksUI.h  test.cpp
Tasks.UI/src/: TasksUI.cpp  TasksUI.h
TodoCore/: CMakeLists.txt
TodoCore.Tests/: CMakeLists.txt
TodoCore.Tests/src/: TaskManager.cpp
TodoCore/src/: TaskManager.cpp  TaskManager.h  utils.h
TodoUI.ImGui/: CMakeLists.txt  imgui.cmake
TodoUI.ImGui/resources/: checkmark_icon.h
TodoUI.ImGui/src/: ImGuiTodoUI.cpp  ImGuiTodoUI.h  Window.cpp  Window.h  widgets.h
TodoUI.Repl/: CMakeLists.txt
TodoUI.Repl/src/: ReplTodoUI.cpp  ReplTodoUI.h
